[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sipQuant"
version = "1.0.0"
authors = [
  { name="SIP Global", email="packages@sipglobally.com" }
]
description = "Quantitative library for physically-settled commodity markets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
dependencies = [
    "numpy>=1.23"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/Systematic-Index-Partners/sipQuant"
Documentation = "https://sipquant.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/Systematic-Index-Partners/sipQuant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sipQuant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
